add format valueArray in tracks
