# src/validation/track.validation.js
@@ -4,6 +4,7 @@ const {
 } = require('auth-middleware');
 
 const features = ['fishing', 'speed', 'course'];
+const fields = ['fishing', 'speed', 'course', 'lonlat', 'timestamp'];
 
 const schemaTracks = Joi.object({
   startDate: Joi.date().iso(),
@@ -13,34 +14,58 @@ const schemaTracks = Joi.object({
   }),
   features: Joi.string(),
   format: Joi.string()
-    .allow('lines', 'points')
+    .allow('lines', 'points', 'valueArray')
     .default('lines'),
   query: Joi.boolean().default(false),
   binary: Joi.boolean().default(false),
+  fields: Joi.string(),
   wrapLongitudes: Joi.boolean().default(false),
 });
 
 async function tracksValidation(ctx, next) {
+  let value;
   try {
-    const value = await schemaTracks.validateAsync(ctx.request.query);
-
+    value = await schemaTracks.validateAsync(ctx.request.query);
     Object.keys(value).forEach(k => {
       ctx.query[k] = value[k];
     });
-    if (ctx.query.features) {
-      const invalid = ctx.query.features
-        .split(',')
-        .some(f => features.indexOf(f) === -1);
-      if (invalid) {
-        throw new UnprocessableEntityException('Invalid query', []);
-      }
-      ctx.query.features = ctx.query.features.split(',');
-    } else {
-      ctx.query.features = [];
-    }
   } catch (err) {
     throw new UnprocessableEntityException('Invalid query', err.details);
   }
+
+  if (ctx.query.features) {
+    const invalid = ctx.query.features
+      .split(',')
+      .some(f => features.indexOf(f) === -1);
+    if (invalid) {
+      throw new UnprocessableEntityException('Invalid query', [
+        {
+          path: ['features'],
+          message: 'Invalid query features',
+        },
+      ]);
+    }
+    ctx.query.features = ctx.query.features.split(',');
+  } else {
+    ctx.query.features = [];
+  }
+  if (ctx.query.fields) {
+    const invalid = ctx.query.fields
+      .split(',')
+      .some(f => fields.indexOf(f) === -1);
+    if (invalid) {
+      throw new UnprocessableEntityException('Invalid query', [
+        {
+          path: ['fields'],
+          message: 'Invalid query fields',
+        },
+      ]);
+    }
+    ctx.query.fields = ctx.query.fields.split(',');
+  } else {
+    ctx.query.fields = [];
+  }
+
   await next();
 }
 
